# LatentReasoning

./: CLAUDE.md  gradientsplan.md  plan.md  pyproject.toml  reset.sh  run.sh  start.sh  test.py
configs/: all-questions.yaml  base.yaml  baseline.yaml  tpu.yaml
scripts/: download.py  evaluate.py  tpu_utilization.py  train.py
slurms/: a100.slurm
src/data/: __init__.py  collator.py  dataset.py
src/eval/: __init__.py  evaluator.py  metrics.py
src/model/: __init__.py  bridge.py  latent_gemma.py
src/training/: __init__.py  curriculum.py  trainer.py
tests/: test_model.py
